--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "npx prisma db push && next start"
+    "start": "npx prisma db push --accept-data-loss --skip-generate && node server.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
